<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recetas"
        android:icon="@drawable/ic_baseline_icecream_24"
        android:title="@string/title_recetas" />

    <item
        android:id="@+id/navigation_notificaciones"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/title_noticias" />
    <item
        android:id="@+id/navigation_restaurantes"
        android:icon="@drawable/ic_baseline_reviews_24"
        android:title="@string/title_restaurantes" />

</menu>