<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.veganplace.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
            </fragment>

    <fragment
        android:id="@+id/navigation_recetas"
        android:name="com.example.veganplace.ui.recetas.RecetasFragment"
        android:label="@string/title_recetas"
        tools:layout="@layout/fragment_recetas" />

    <fragment
        android:id="@+id/navigation_notificaciones"
        android:name="com.example.veganplace.ui.noticias.NoticiasFragment"
        android:label="@string/title_noticias"
        tools:layout="@layout/fragment_noticias" />
    <fragment
        android:id="@+id/navigation_restaurantes"
        android:name="com.example.veganplace.ui.restaurantes.RestaurantesFragment"
        android:label="@string/title_restaurantes"
        tools:layout="@layout/fragment_restaurantes" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.veganplace.ui.social.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />


</navigation>